<resources>
    <string name="app_name">Elate</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vivek</string>
    <string name="nav_header_subtitle">vivek.singh@orangeskioll.com</string>
    <string name="nav_header_desc">User Details</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_order">My Order</string>
    <string name="menu_feed">Feed</string>
    <string name="menu_mycart">My Cart</string>
    <string name="menu_help">Help</string>
    <string name="menu_aboutus">About Us</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="loading">"Loading"</string>

    <string name="no_internet_connection_msg_header">Unable to connect to the internet</string>
    <string name="no_internet_connection_msg">It appears that you don’t have an active\ninternet connection.</string>
    <string name="api_error_header_msg">Communication Error</string>
    <string name="api_error_msg">Sorry, we are unable to load your information.</string>
    <string name="retry">Retry</string>

    <string name="submit">SUBMIT ></string>
    <string name="login_msg">A happier &amp; healthier you!</string>
    <string name="sign_up">Sign UP</string>
    <string name="login_notice">Use your phone number to sign in. Dont worry we will not share your phone number with any one.</string>
    <string name="login">Login</string>
    <string name="hint_phone">your phone number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>

    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_phone">Not a valid phone number</string>
    <string name="password_match">Password is not same</string>
    <string name="sample">First of all, just getting to the theater presents difficulties. Leaving a home equipped with a TV and a video recorder  an attractive idea on a humid, cold, or rainy night. Even if the weather cooperates, there is still a thirty-minute drive to the theater down</string>


    <string-array name="country">
        <item>+91 India</item>
        <item>+1 US United States</item>
        <item>+44 GB United Kingdom</item>
        <item>+39 Itley</item>
        <item>+49 DE Germeny</item>
    </string-array>

    <string name="category">Category</string>
    <string name="profile">Profile</string>

    <string name="slide1">A happier and healthier you!</string>
    <string name="slide1_para">Yoga, Meditation\n Nutrition and Sleep.</string>

    <string name="slide2">Meditation</string>
    <string name="slide2_para">Learn the most effictive \n methods to do meditation.</string>

    <string name="slide3">Yoga</string>
    <string name="slide3_para">Curated program to\n improve physical health.</string>

    <string name="slide4">Nutrition</string>
    <string name="slide4_para">Foods which are good\n for mind and body.</string>

    <string name="next">Lets get started</string>
    <string name="skip"><b><u>skip</u></b></string>
    <string name="start">GOT IT</string>

    <string name="text_with_bullet1">\u2022 \u25CB \u25CB \u25CB</string>
    <string name="text_with_bullet2"> \u25CB \u2022 \u25CB \u25CB</string>
    <string name="text_with_bullet3"> \u25CB \u25CB \u2022 \u25CB</string>
    <string name="text_with_bullet4"> \u25CB \u25CB \u25CB \u2022</string>
</resources>
