<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
    </data>

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <ImageView
            android:id="@+id/main_logo"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:scaleType="fitXY"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_logo_blue"/>

        <ImageView
            android:id="@+id/meditation_img"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:src="@drawable/meditation"
            android:layout_below="@id/main_logo"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp">


        <TextView
            android:id="@+id/slide2_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide2"
            android:textSize="10pt"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/para"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide2_para"
            android:layout_below="@id/slide2_txt"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:textSize="8pt"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/text_with_bullet2"
            android:layout_below="@id/para"/>
    </RelativeLayout>


    </RelativeLayout>
</layout>
